# cmakeExperiment

./: CMakeLists.txt  CMakePresets.json  README.md
.claude/: settings.json
common/: CMakeLists.txt
common/include/: lang.hpp  language.hpp  language_native.hpp
common/src/: CMakeLists.txt  gen_table.cpp  language.cpp  language_native.cpp  translations.txt
common/src/localization/: CMakeLists.txt  lang_lookup.hpp
common/src/localization/_empty_stub/: language.cpp
common/src/localization/latin/: CMakeLists.txt  lang.hpp  language.cpp
common/src/localization/native/: lang.hpp  language.cpp
common/test/: CMakeLists.txt
common/test/latin/: test_language.cpp
common/test/localization/: CMakeLists.txt
common/test/localization/_empty_stub/: CMakeLists.txt  test_language.cpp
common/test/localization/latin/: test_language.cpp
common/test/localization/native/: CMakeLists.txt  test_language.cpp
common/test/native/: test_language.cpp
denmark/: CMakeLists.txt
denmark/include/: denmark.hpp
denmark/src/: CMakeLists.txt  city_names.cpp  city_names.hpp  denmark.cpp
denmark/test/: CMakeLists.txt  test_denmark.cpp
denmark/test/latin/: test_denmark.cpp
denmark/test/native/: test_denmark.cpp
iceland/: CMakeLists.txt  iceland.py
iceland/src/: CMakeLists.txt  iceland_bindings.cpp
include/: scandinavia.hpp
scandinavia/: CMakeLists.txt
scandinavia/include/: scandinavia.hpp
scandinavia/src/: CMakeLists.txt  scandinavia.cpp
src/: scandinavia.cpp
sweden/: CMakeLists.txt
sweden/include/: sweden.hpp
sweden/src/: CMakeLists.txt  city_names.cpp  city_names.hpp  sweden.cpp
sweden/test/: CMakeLists.txt  test_sweden.cpp
sweden/test/latin/: test_sweden.cpp
sweden/test/native/: CMakeLists.txt  test_sweden.cpp
utilities/: CMakeLists.txt
utilities/src/: CMakeLists.txt  hello_scandinavia.cpp
utilities/test/: CMakeLists.txt  test_utilities.cpp  test_utilities.hpp
utilities/test/latin/: greetings_data.cpp
utilities/test/native/: greetings_data.cpp
